@@ -255,6 +255,8 @@
 	- cWeightedStdDev: implemented stddev(); also fixed min() and max()
 	  (they bogusly returned min/max of the weight*value products).
 	  For stddev(), code is based on the patch from Peter Woitek.
+        - cStatistic: added 3 new functions, to access values underlying weighted
+          statistics: weightedSum(), sqrSumWeights(), weightedSqrSum()
 
 	Files renamed (Note: simulation models should only refer to <omnetpp.h>!)
 	     --OLD--          --NEW--
